--- a/index.html
+++ b/index.html
@@ -56,11 +56,46 @@
 
     <!-- Jumbotron -->
     <header class="jumbotron text-light bg-blue">
-      <div class="container">
-        <h1>
-          <div>Bersama Lawan Covid</div>
-          <div>Bersama Akhiri Pandemi</div>
-        </h1>
+      <div class="container wrapper">
+        <div class="headline">
+          <h1>
+            <div>
+              Bersama Lawan <span style="white-space: nowrap">Covid-19</span>
+            </div>
+            <div>Bersama Akhiri Pandemi</div>
+          </h1>
+          <p>Jaga diri dan sekitar dengan melakukan protokol kesehatan</p>
+          <p>
+            Mari bersama kita lawan covid-19, agar pandemi ini dapat segera
+            berakhir
+          </p>
+          <a href="#" class="cta">Pelajari Lebih Lanjut</a>
+        </div>
+        <div class="case">
+          <img src="image/people-wearing-mask.png" />
+          <ul class="widget text-dark">
+            <li class="positif">
+              <span class="tag">Jumlah Positif</span>
+              <span class="value">212,502,421</span>
+              <span class="orang">Orang</span>
+            </li>
+            <li class="sembuh">
+              <span class="tag">Jumlah Sembuh</span>
+              <span class="value">212,502,421</span>
+              <span class="orang">Orang</span>
+            </li>
+            <li class="meninggal">
+              <span class="tag">Jumlah Meninggal</span>
+              <span class="value">212,502,421</span>
+              <span class="orang">Orang</span>
+            </li>
+            <li class="dirawat">
+              <span class="tag">Jumlah Dirawat</span>
+              <span class="value">212,502,421</span>
+              <span class="orang">Orang</span>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
     <!-- End Jumbotron -->
