--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <button class="navbar-toggler text-light bg-none" tabindex="0">
           =
         </button>
-        <ul class="navbar-nav m-0 bg-blue">
+        <ul class="navbar-nav bg-blue">
           <li class="nav-item">
             <a href="#" class="nav-link">Kasus</a>
           </li>
@@ -76,22 +76,22 @@
           <ul class="widget text-dark">
             <li class="positif">
               <span class="tag">Jumlah Positif</span>
-              <span class="value">212,502,421</span>
+              <span class="value">-</span>
               <span class="orang">Orang</span>
             </li>
             <li class="sembuh">
               <span class="tag">Jumlah Sembuh</span>
-              <span class="value">212,502,421</span>
+              <span class="value">-</span>
               <span class="orang">Orang</span>
             </li>
             <li class="meninggal">
               <span class="tag">Jumlah Meninggal</span>
-              <span class="value">212,502,421</span>
+              <span class="value">-</span>
               <span class="orang">Orang</span>
             </li>
             <li class="dirawat">
               <span class="tag">Jumlah Dirawat</span>
-              <span class="value">212,502,421</span>
+              <span class="value">-</span>
               <span class="orang">Orang</span>
             </li>
           </ul>
@@ -100,5 +100,5 @@
     </header>
     <!-- End Jumbotron -->
   </body>
-  <script src="script/navbar.js"></script>
+  <script src="script/index.js" type="module"></script>
 </html>
