--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
             </div>
             <div>Bersama Akhiri Pandemi</div>
           </h1>
-          <p>Jaga diri dan sekitar dengan melakukan protokol kesehatan</p>
-          <p>
+          <h6>Jaga diri dan sekitar dengan melakukan protokol kesehatan</h6>
+          <h6>
             Mari bersama kita lawan covid-19, agar pandemi ini dapat segera
             berakhir
-          </p>
-          <a href="#" class="cta">Pelajari Lebih Lanjut</a>
+          </h6>
+          <a href="#pengenalan" class="cta">Pelajari Lebih Lanjut</a>
         </div>
         <div class="case" id="kasus">
           <img src="image/people-wearing-mask.png" />
@@ -135,6 +135,64 @@
       </div>
     </section>
     <!-- End Pengenalan -->
+
+    <!-- Gejala -->
+    <section class="gejala" id="gejala">
+      <div class="container wrapper">
+        <div class="heading">
+          <h6 class="subtitle">Gejala Covid-19</h6>
+          <h2 class="title">Apa saja gejala Covid-19?</h2>
+        </div>
+        <div class="list list-one">
+          <div class="card">
+            <span class="name">Demam</span>
+            <p class="desc">
+              Demam biasanya muncul pada orang yang terinfeksi Covid-19, dengan
+              suhu lebih dari 37,7 derajat celcius.
+            </p>
+          </div>
+          <div class="card">
+            <span class="name">Sesak Napas</span>
+            <p class="desc">
+              Sesak napas biasanya muncul sebagai tanda penyakit mencapai
+              tahapan serius.
+            </p>
+          </div>
+          <div class="card">
+            <span class="name">Batuk Kering</span>
+            <p class="desc">
+              Batuk yang terjadi merupakan batuk kering, tidak mengeluarkan
+              lendir atau dahak dari saluran pernapasan.
+            </p>
+          </div>
+        </div>
+        <img src="image/flu-person.svg" alt="person being flu" />
+        <div class="list list-two">
+          <div class="card">
+            <span class="name">Kehilangan Rasa</span>
+            <p class="desc">
+              Kehilangan kemampuan indra pembau dan pengecap juga menjadi tanda
+              seseorang terpapar Covid-19
+            </p>
+          </div>
+          <div class="card">
+            <span class="name">Mulut Kering</span>
+            <p class="desc">
+              Gejala terjadi akibat kelenjar ludah di mulut tak menghasilkan
+              cukup air liur yang bisa menjaga mulut tetap basah.
+            </p>
+          </div>
+          <div class="card">
+            <span class="name">Kelelahan</span>
+            <p class="desc">
+              Lelah akibat Covid-19 biasanya disertai gejala lain seperti nyeri
+              otot dan sakit tenggorokan.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End Gejala -->
   </body>
   <script src="script/index.js" type="module"></script>
 </html>
