--- a/index.html
+++ b/index.html
@@ -104,8 +104,10 @@
     <section class="pengenalan" id="pengenalan">
       <div class="container wrapper">
         <div class="left">
-          <h6 class="subtitle">Pengenalan Covid-19</h6>
-          <h2 class="title">Apa itu virus Covid-19?</h2>
+          <div class="heading">
+            <h6 class="subtitle">Pengenalan Covid-19</h6>
+            <h2 class="title">Apa itu virus Covid-19?</h2>
+          </div>
           <p class="desc">
             Virus Corona atau severe acute respiratory syndrome coronavirus 2
             (SARS-CoV-2) adalah virus yang menyerang sistem pernapasan. Penyakit
@@ -193,6 +195,12 @@
       </div>
     </section>
     <!-- End Gejala -->
+
+    <!-- Pencegahan -->
+    <section class="pencegahan" id="pencegahan">
+      <div class="container wrapper"></div>
+    </section>
+    <!-- End Pencegahan -->
   </body>
   <script src="script/index.js" type="module"></script>
 </html>
