--- a/index.html
+++ b/index.html
@@ -198,7 +198,58 @@
 
     <!-- Pencegahan -->
     <section class="pencegahan" id="pencegahan">
-      <div class="container wrapper"></div>
+      <div class="container wrapper">
+        <div class="heading">
+          <h6 class="subtitle">Pencegahan Covid-19</h6>
+          <h2 class="title">Bagaimana mencegah penyebaran Covid-19?</h2>
+        </div>
+        <div class="subheading">
+          Penyebaran covid-19 harus ditekan semaksimal mungkin. Salah satu cara
+          utamanya adalah dengan menerapkan protokol kesehatan 3M secara
+          disiplin.
+        </div>
+        <div class="list">
+          <div class="card">
+            <div
+              class="image"
+              style="background-image: url(image/handwashing.svg)"
+            ></div>
+            <div class="body">
+              <span class="name">Mencuci Tangan</span>
+              <p class="desc">
+                Dengan mencuci tangan menggunakan sabun antibakteri, virus yang
+                ada di tangan bisa dilumpuhkan.
+              </p>
+            </div>
+          </div>
+          <div class="card">
+            <div
+              class="image"
+              style="background-image: url(image/face-mask.svg)"
+            ></div>
+            <div class="body">
+              <span class="name">Memakai Masker</span>
+              <p class="desc">
+                Pastikan untuk selalu menggunakan masker saat sedang berpergian
+                atau keluar rumah.
+              </p>
+            </div>
+          </div>
+          <div class="card">
+            <div
+              class="image"
+              style="background-image: url(image/social-distancing.svg)"
+            ></div>
+            <div class="body">
+              <span class="name">Menjaga Jarak</span>
+              <p class="desc">
+                Selalu disiplin menjaga jarak saat sedang berpergian bersama
+                orang lain kurang lebih 2 meter.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     <!-- End Pencegahan -->
   </body>
