--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
             <a href="#pengenalan" class="nav-link">Pengenalan</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Gejala</a>
+            <a href="#gejala" class="nav-link">Gejala</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Pencegahan</a>
+            <a href="#pencegahan" class="nav-link">Pencegahan</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Vaksin</a>
+            <a href="#vaksinasi" class="nav-link">Vaksinasi</a>
           </li>
           <li class="nav-item">
             <a href="#" class="nav-link">FAQ</a>
@@ -117,7 +117,7 @@
           </p>
           <div class="penyebab">
             <h6>Penyebab seseorang bisa terjangkit covid-19:</h6>
-            <ul>
+            <ul class="bullet-list">
               <li>
                 Tidak sengaja menghirup percikan ludah (droplet) yang keluar
                 saat penderita COVID-19 batuk atau bersin
@@ -252,6 +252,48 @@
       </div>
     </section>
     <!-- End Pencegahan -->
+
+    <!-- Vaksin -->
+    <section class="vaksinasi" id="vaksinas">
+      <div class="container wrapper">
+        <div class="left">
+          <div class="heading">
+            <h6 class="subtitle">Vaksinasi Covid-19</h6>
+            <h2 class="title">Kenapa kita harus vaksinasi covid-19?</h2>
+          </div>
+          <p class="desc">
+            Pelaksanaan vaksinasi COVID-19 bertujuan untuk memutus rantai
+            penularan penyakit dan menghentikan wabah COVID-19. Vaksin COVID-19
+            bermanfaat untuk memberi perlindungan tubuh agar tidak jatuh sakit
+            akibat COVID-19 dengan cara menimbulkan atau menstimulasi kekebalan
+            spesifik dalam tubuh dengan pemberian vaksin.
+          </p>
+          <h6>Perkembangan vaksinasi covid-19 di Indonesia:</h6>
+          <ul class="bullet-list">
+            <li>
+              Vaksinasi gelombang 1 telah mencapai
+              <span class="value">-</span> orang
+            </li>
+            <li>
+              Vaksinasi gelombang 2 telah mencapai
+              <span class="value">-</span> orang
+            </lic>
+          </ul>
+        </div>
+        <div class="right">
+          <img src="image/vaccine.svg" alt="vaccine covid-19" />
+        </div>
+      </div>
+    </section>
+    <!-- End Vaksin -->
+
+    <!-- FAQ -->
+    <section class="faq" id="faq">
+      <div class="container wwrapper">
+        
+      </div>
+    </section>
+    <!-- End FAQ -->
   </body>
   <script src="script/index.js" type="module"></script>
 </html>
