--- a/index.html
+++ b/index.html
@@ -289,8 +289,40 @@
 
     <!-- FAQ -->
     <section class="faq" id="faq">
-      <div class="container wwrapper">
-        
+      <div class="container wrapper">
+        <div class="heading">
+          <h6 class="subtitle">FAQ Covid-19</h6>
+          <h2 class="title">Hal yang sering ditanyakan tentang <span style="white-space: nowrap;">covid-19</span></h2>
+        </div>
+        <div class="accordion">
+          <div class="item">
+            <div class="question">
+              <span>Apa itu covid-19 dan coronavirus?</span>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z" /></svg>
+            </div>
+            <div class="answer">
+              Virus Corona atau COVID-19 ini merupakan jenis baru dari coronavirus yang menular ke manusia. Virus ini bisa menyerang siapa saja, bayi, anak-anak, orang dewasa, lansia, ibu hamil, maupun ibu menyusui.
+            </div>
+          </div>
+          <div class="item">
+            <div class="question">
+              <span>Apa itu covid-19 dan coronavirus?</span>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z" /></svg>
+            </div>
+            <div class="answer">
+              Virus Corona atau COVID-19 ini merupakan jenis baru dari coronavirus yang menular ke manusia. Virus ini bisa menyerang siapa saja, bayi, anak-anak, orang dewasa, lansia, ibu hamil, maupun ibu menyusui.
+            </div>
+          </div>
+          <div class="item">
+            <div class="question">
+              <span>Apa itu covid-19 dan coronavirus?</span>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z" /></svg>
+            </div>
+            <div class="answer">
+              Virus Corona atau COVID-19 ini merupakan jenis baru dari coronavirus yang menular ke manusia. Virus ini bisa menyerang siapa saja, bayi, anak-anak, orang dewasa, lansia, ibu hamil, maupun ibu menyusui.
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <!-- End FAQ -->
