--- a/index.html
+++ b/index.html
@@ -306,20 +306,65 @@
           </div>
           <div class="item">
             <div class="question">
-              <span>Apa itu covid-19 dan coronavirus?</span>
+              <span>Bagaimana COVID-19 menular?</span>
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z" /></svg>
             </div>
             <div class="answer">
-              Virus Corona atau COVID-19 ini merupakan jenis baru dari coronavirus yang menular ke manusia. Virus ini bisa menyerang siapa saja, bayi, anak-anak, orang dewasa, lansia, ibu hamil, maupun ibu menyusui.
+              Penularan terjadi melalui droplet (butir-butir tetesan cairan) dari hidung atau mulut yang menyebar saat pembawa virus COVID-19 batuk, bersin atau meler.
             </div>
           </div>
           <div class="item">
             <div class="question">
-              <span>Apa itu covid-19 dan coronavirus?</span>
+              <span>Berapa lama tetesan cairan berisi virus itu bisa hidup di permukaan atau menempel pada benda?</span>
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z" /></svg>
             </div>
             <div class="answer">
-              Virus Corona atau COVID-19 ini merupakan jenis baru dari coronavirus yang menular ke manusia. Virus ini bisa menyerang siapa saja, bayi, anak-anak, orang dewasa, lansia, ibu hamil, maupun ibu menyusui.
+              Studi menunjukkan bahwa virus korona dapat bertahan selama beberapa jam di permukaan. Ini dapat bervariasi di dalam kondisi yang berbeda.
+            </div>
+          </div>
+          <div class="item">
+            <div class="question">
+              <span>Jika seseorang terinfeksi virus ini, berapa lama sampai muncul gejala?</span>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z" /></svg>
+            </div>
+            <div class="answer">
+              Masa inkubasi (dari masuknya virus ke dalam tubuh sampai munculnya gejala awal) adalah 1 – 14 hari, dengan rata-rata timbulnya gejala selama 5 hari.
+            </div>
+          </div>
+          <div class="item">
+            <div class="question">
+              <span>Apakah COVID-19 sudah ada obatnya?</span>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z" /></svg>
+            </div>
+            <div class="answer">
+              Sampai saat ini, obat spesifik untuk COVID-19 belum ditemukan. Akan tetapi, penelitian terus dilakukan oleh berbagai pihak. Penanganan saat ini fokus pada gejala yang timbul dari penderita.
+            </div>
+          </div>
+          <div class="item">
+            <div class="question">
+              <span>Apa itu vaksinasi?</span>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z" /></svg>
+            </div>
+            <div class="answer">
+              Vaksinasi adalah pemberian Vaksin dalam rangka menimbulkan atau meningkatkan kekebalan seseorang secara aktif terhadap suatu penyakit, sehingga apabila suatu saat terjangkit dengan penyakit tersebut tidak akan sakit atau hanya mengalami sakit ringan dan tidak menjadi sumber penularan.
+            </div>
+          </div>
+          <div class="item">
+            <div class="question">
+              <span>Apakah vaksin itu obat?</span>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z" /></svg>
+            </div>
+            <div class="answer">
+              Vaksin bukanlah obat, vaksin mendorong pembentukan kekebalan spesifik tubuh agar terhindar dari tertular ataupun kemungkinan sakit berat.
+            </div>
+          </div>
+          <div class="item">
+            <div class="question">
+              <span>Apa yang dimaksud dengan kekebalan kelompok (herd immunity)?</span>
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z" /></svg>
+            </div>
+            <div class="answer">
+              Kekebalan kelompok atau herd Immunity merupakan situasi dimana sebagian besar masyarakat terlindung/kebal terhadap penyakit tertentu. Melalui kekebalan kelompok, akan timbul dampak tidak langsung (indirect effect), yaitu turut terlindunginya kelompok masyarakat yang rentan dan bukan merupakan sasaran vaksinasi.
             </div>
           </div>
         </div>
