--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="headline">
           <h1>
             <div>
-              Bersama Lawan <span style="white-space: nowrap">Covid-19</span>
+              Bersama Lawan <span style="white-space: nowrap">COVID-19</span>
             </div>
             <div>Bersama Akhiri Pandemi</div>
           </h1>
@@ -106,7 +106,7 @@
         <div class="left">
           <div class="heading">
             <h6 class="subtitle">Pengenalan Covid-19</h6>
-            <h2 class="title">Apa itu virus Covid-19?</h2>
+            <h2 class="title">Apa itu virus <span style="white-space: nowrap;">COVID-19</span></h2>
           </div>
           <p class="desc">
             Virus Corona atau severe acute respiratory syndrome coronavirus 2
@@ -143,7 +143,7 @@
       <div class="container wrapper">
         <div class="heading">
           <h6 class="subtitle">Gejala Covid-19</h6>
-          <h2 class="title">Apa saja gejala Covid-19?</h2>
+          <h2 class="title">Apa saja gejala <span style="white-space: nowrap;">COVID-19</span></h2>
         </div>
         <div class="list list-one">
           <div class="card">
@@ -201,7 +201,7 @@
       <div class="container wrapper">
         <div class="heading">
           <h6 class="subtitle">Pencegahan Covid-19</h6>
-          <h2 class="title">Bagaimana mencegah penyebaran Covid-19?</h2>
+          <h2 class="title">Bagaimana mencegah penyebaran <span style="white-space: nowrap;">COVID-19</span></h2>
         </div>
         <div class="subheading">
           Penyebaran covid-19 harus ditekan semaksimal mungkin. Salah satu cara
@@ -259,7 +259,7 @@
         <div class="left">
           <div class="heading">
             <h6 class="subtitle">Vaksinasi Covid-19</h6>
-            <h2 class="title">Kenapa kita harus vaksinasi covid-19?</h2>
+            <h2 class="title">Kenapa kita harus vaksinasi <span style="white-space: nowrap;">COVID-19</span></h2>
           </div>
           <p class="desc">
             Pelaksanaan vaksinasi COVID-19 bertujuan untuk memutus rantai
@@ -292,12 +292,12 @@
       <div class="container wrapper">
         <div class="heading">
           <h6 class="subtitle">FAQ Covid-19</h6>
-          <h2 class="title">Hal yang sering ditanyakan tentang <span style="white-space: nowrap;">covid-19</span></h2>
+          <h2 class="title">Hal yang sering ditanyakan tentang <span style="white-space: nowrap;">COVID-19</span></h2>
         </div>
         <div class="accordion">
           <div class="item">
             <div class="question">
-              <span>Apa itu covid-19 dan coronavirus?</span>
+              <span>Apa itu COVID-19 dan coronavirus?</span>
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z" /></svg>
             </div>
             <div class="answer">
