--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <a href="#vaksinasi" class="nav-link">Vaksinasi</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">FAQ</a>
+            <a href="#faq" class="nav-link">FAQ</a>
           </li>
         </ul>
       </div>
@@ -254,7 +254,7 @@
     <!-- End Pencegahan -->
 
     <!-- Vaksin -->
-    <section class="vaksinasi" id="vaksinas">
+    <section class="vaksinasi" id="vaksinasi">
       <div class="container wrapper">
         <div class="left">
           <div class="heading">
@@ -297,7 +297,7 @@
         <div class="accordion">
           <div class="item">
             <div class="question">
-              <span>Apa itu COVID-19 dan coronavirus?</span>
+              <span>Apa itu COVID-19 dan Coronavirus?</span>
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z" /></svg>
             </div>
             <div class="answer">
