--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Navbar -->
     <nav class="navbar text-light bg-blue">
       <div class="container wrapper">
-        <a class="navbar-logo">
+        <a href="#" class="navbar-logo">
           p<span class="text-red">end</span>emi<span class="text-red"
             >c-19</span
           >
