--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           >
         </a>
         <button class="navbar-toggler text-light bg-none" tabindex="0">
-          =
+          <img src="image/hamburger-menu.png">
         </button>
         <ul class="navbar-nav bg-blue">
           <li class="nav-item">
@@ -60,7 +60,7 @@
         <div class="headline">
           <h1>
             <div>
-              Bersama Lawan <span style="white-space: nowrap">COVID-19</span>
+              Bersama Lawan <span style="white-space: nowrap">COVID-19?</span>
             </div>
             <div>Bersama Akhiri Pandemi</div>
           </h1>
@@ -106,7 +106,7 @@
         <div class="left">
           <div class="heading">
             <h6 class="subtitle">Pengenalan Covid-19</h6>
-            <h2 class="title">Apa itu virus <span style="white-space: nowrap;">COVID-19</span></h2>
+            <h2 class="title">Apa itu virus <span style="white-space: nowrap;">COVID-19?</span></h2>
           </div>
           <p class="desc">
             Virus Corona atau severe acute respiratory syndrome coronavirus 2
@@ -143,7 +143,7 @@
       <div class="container wrapper">
         <div class="heading">
           <h6 class="subtitle">Gejala Covid-19</h6>
-          <h2 class="title">Apa saja gejala <span style="white-space: nowrap;">COVID-19</span></h2>
+          <h2 class="title">Apa saja gejala <span style="white-space: nowrap;">COVID-19?</span></h2>
         </div>
         <div class="list list-one">
           <div class="card">
@@ -201,7 +201,7 @@
       <div class="container wrapper">
         <div class="heading">
           <h6 class="subtitle">Pencegahan Covid-19</h6>
-          <h2 class="title">Bagaimana mencegah penyebaran <span style="white-space: nowrap;">COVID-19</span></h2>
+          <h2 class="title">Bagaimana mencegah penyebaran <span style="white-space: nowrap;">COVID-19?</span></h2>
         </div>
         <div class="subheading">
           Penyebaran covid-19 harus ditekan semaksimal mungkin. Salah satu cara
@@ -259,7 +259,7 @@
         <div class="left">
           <div class="heading">
             <h6 class="subtitle">Vaksinasi Covid-19</h6>
-            <h2 class="title">Kenapa kita harus vaksinasi <span style="white-space: nowrap;">COVID-19</span></h2>
+            <h2 class="title">Kenapa kita harus vaksinasi <span style="white-space: nowrap;">COVID-19?</span></h2>
           </div>
           <p class="desc">
             Pelaksanaan vaksinasi COVID-19 bertujuan untuk memutus rantai
@@ -300,72 +300,72 @@
               <span>Apa itu COVID-19 dan Coronavirus?</span>
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z" /></svg>
             </div>
-            <div class="answer">
+            <p class="answer">
               Virus Corona atau COVID-19 ini merupakan jenis baru dari coronavirus yang menular ke manusia. Virus ini bisa menyerang siapa saja, bayi, anak-anak, orang dewasa, lansia, ibu hamil, maupun ibu menyusui.
-            </div>
+            </p>
           </div>
           <div class="item">
             <div class="question">
               <span>Bagaimana COVID-19 menular?</span>
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z" /></svg>
             </div>
-            <div class="answer">
+            <p class="answer">
               Penularan terjadi melalui droplet (butir-butir tetesan cairan) dari hidung atau mulut yang menyebar saat pembawa virus COVID-19 batuk, bersin atau meler.
-            </div>
+            </p>
           </div>
           <div class="item">
             <div class="question">
               <span>Berapa lama tetesan cairan berisi virus itu bisa hidup di permukaan atau menempel pada benda?</span>
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z" /></svg>
             </div>
-            <div class="answer">
+            <p class="answer">
               Studi menunjukkan bahwa virus korona dapat bertahan selama beberapa jam di permukaan. Ini dapat bervariasi di dalam kondisi yang berbeda.
-            </div>
+            </p>
           </div>
           <div class="item">
             <div class="question">
               <span>Jika seseorang terinfeksi virus ini, berapa lama sampai muncul gejala?</span>
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z" /></svg>
             </div>
-            <div class="answer">
+            <p class="answer">
               Masa inkubasi (dari masuknya virus ke dalam tubuh sampai munculnya gejala awal) adalah 1 – 14 hari, dengan rata-rata timbulnya gejala selama 5 hari.
-            </div>
+            </p>
           </div>
           <div class="item">
             <div class="question">
               <span>Apakah COVID-19 sudah ada obatnya?</span>
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z" /></svg>
             </div>
-            <div class="answer">
+            <p class="answer">
               Sampai saat ini, obat spesifik untuk COVID-19 belum ditemukan. Akan tetapi, penelitian terus dilakukan oleh berbagai pihak. Penanganan saat ini fokus pada gejala yang timbul dari penderita.
-            </div>
+            </p>
           </div>
           <div class="item">
             <div class="question">
               <span>Apa itu vaksinasi?</span>
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z" /></svg>
             </div>
-            <div class="answer">
+            <p class="answer">
               Vaksinasi adalah pemberian Vaksin dalam rangka menimbulkan atau meningkatkan kekebalan seseorang secara aktif terhadap suatu penyakit, sehingga apabila suatu saat terjangkit dengan penyakit tersebut tidak akan sakit atau hanya mengalami sakit ringan dan tidak menjadi sumber penularan.
-            </div>
+            </p>
           </div>
           <div class="item">
             <div class="question">
               <span>Apakah vaksin itu obat?</span>
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z" /></svg>
             </div>
-            <div class="answer">
+            <p class="answer">
               Vaksin bukanlah obat, vaksin mendorong pembentukan kekebalan spesifik tubuh agar terhindar dari tertular ataupun kemungkinan sakit berat.
-            </div>
+            </p>
           </div>
           <div class="item">
             <div class="question">
               <span>Apa yang dimaksud dengan kekebalan kelompok (herd immunity)?</span>
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z" /></svg>
             </div>
-            <div class="answer">
+            <p class="answer">
               Kekebalan kelompok atau herd Immunity merupakan situasi dimana sebagian besar masyarakat terlindung/kebal terhadap penyakit tertentu. Melalui kekebalan kelompok, akan timbul dampak tidak langsung (indirect effect), yaitu turut terlindunginya kelompok masyarakat yang rentan dan bukan merupakan sasaran vaksinasi.
-            </div>
+            </p>
           </div>
         </div>
       </div>
