--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="headline">
           <h1>
             <div>
-              Bersama Lawan <span style="white-space: nowrap">COVID-19?</span>
+              Bersama Lawan <span style="white-space: nowrap">COVID-19</span>
             </div>
             <div>Bersama Akhiri Pandemi</div>
           </h1>
