--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
             >c-19</span
           >
         </a>
-        <button class="navbar-toggler text-light bg-none" tabindex="0">
-          <img src="image/hamburger-menu.png">
-        </button>
+        <button class="navbar-toggler text-light bg-none"></button>
         <ul class="navbar-nav bg-blue">
           <li class="nav-item">
             <a href="#kasus" class="nav-link">Kasus</a>
